--- a/MegaboxClone/Base.lproj/Main.storyboard
+++ b/MegaboxClone/Base.lproj/Main.storyboard
@@ -5,13 +5,14 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--홈-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MegaboxClone" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="MegaboxClone" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -87,20 +88,86 @@
                                     <constraint firstItem="UR8-lN-gS8" firstAttribute="width" secondItem="oBv-Ux-jS8" secondAttribute="width" multiplier="0.06" id="wfN-nh-Cbz"/>
                                 </constraints>
                             </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f1M-Oc-SmD">
+                                <rect key="frame" x="0.0" y="107.5" width="414" height="705.5"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="XAf-Av-Hv3">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="609"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fNp-z7-TzV" userLabel="이벤트 컬렉션뷰">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="153.5"/>
+                                                <subviews>
+                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gYn-fP-2ra">
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="153.5"/>
+                                                        <color key="backgroundColor" red="0.066666666669999999" green="0.066666666669999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ieo-2x-THf">
+                                                            <size key="itemSize" width="128" height="128"/>
+                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                        </collectionViewFlowLayout>
+                                                        <cells>
+                                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eOa-Jh-ykp">
+                                                                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1fc-go-7dN">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                </collectionViewCellContentView>
+                                                            </collectionViewCell>
+                                                        </cells>
+                                                    </collectionView>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="fNp-z7-TzV" secondAttribute="height" multiplier="2.7:1" id="2fQ-Re-Etg"/>
+                                                    <constraint firstAttribute="bottom" secondItem="gYn-fP-2ra" secondAttribute="bottom" id="8VN-KZ-JMA"/>
+                                                    <constraint firstItem="gYn-fP-2ra" firstAttribute="leading" secondItem="fNp-z7-TzV" secondAttribute="leading" id="Bnh-6X-Fsd"/>
+                                                    <constraint firstAttribute="trailing" secondItem="gYn-fP-2ra" secondAttribute="trailing" id="Yja-KZ-JVB"/>
+                                                    <constraint firstItem="gYn-fP-2ra" firstAttribute="top" secondItem="fNp-z7-TzV" secondAttribute="top" id="eFB-Bs-Pv0"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ohX-A1-Nar">
+                                                <rect key="frame" x="0.0" y="153.5" width="414" height="455.5"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="ohX-A1-Nar" secondAttribute="height" multiplier="1:1.1" id="MI0-sQ-jXR"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="XAf-Av-Hv3" firstAttribute="width" secondItem="HIA-7P-f6q" secondAttribute="width" id="49k-A1-mbb"/>
+                                    <constraint firstItem="XAf-Av-Hv3" firstAttribute="leading" secondItem="VxV-5E-43W" secondAttribute="leading" id="Bmt-K3-hK4"/>
+                                    <constraint firstItem="XAf-Av-Hv3" firstAttribute="trailing" secondItem="VxV-5E-43W" secondAttribute="trailing" id="dhB-Nr-iNV"/>
+                                    <constraint firstItem="XAf-Av-Hv3" firstAttribute="bottom" secondItem="VxV-5E-43W" secondAttribute="bottom" id="eby-M6-Nbf"/>
+                                    <constraint firstItem="XAf-Av-Hv3" firstAttribute="top" secondItem="VxV-5E-43W" secondAttribute="top" id="ehp-Oz-pe2"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="VxV-5E-43W"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="HIA-7P-f6q"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="oBv-Ux-jS8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="1eN-d1-fuW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="f1M-Oc-SmD" secondAttribute="trailing" id="6eT-57-Ngd"/>
                             <constraint firstItem="oBv-Ux-jS8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8PG-ZN-7oP"/>
+                            <constraint firstItem="f1M-Oc-SmD" firstAttribute="top" secondItem="oBv-Ux-jS8" secondAttribute="bottom" id="DmJ-6Y-WpJ"/>
+                            <constraint firstItem="f1M-Oc-SmD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="UCE-Hl-O9Q"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="f1M-Oc-SmD" secondAttribute="bottom" id="Xp0-qA-9fo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oBv-Ux-jS8" secondAttribute="trailing" id="rEZ-Vi-nL2"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="홈" image="house" catalog="system" selectedImage="house.fill" id="svG-T9-AJb"/>
+                    <connections>
+                        <outlet property="eventCollectionView" destination="gYn-fP-2ra" id="wnh-gb-EZA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="865" y="98"/>
+            <point key="canvasLocation" x="863.768115942029" y="97.767857142857139"/>
         </scene>
         <!--스토어-->
         <scene sceneID="bfW-EX-LNq">
