--- a/MegaboxClone/Cell/MovieList/MovieListCollectionViewCell.xib
+++ b/MegaboxClone/Cell/MovieList/MovieListCollectionViewCell.xib
@@ -4,29 +4,61 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="MovieListCollectionViewCell" reuseIdentifier="MovieListCollectionViewCell" id="gTV-IL-0wX" customClass="MovieListCollectionViewCell" customModule="MegaboxClone" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="172" height="250"/>
+            <rect key="frame" x="0.0" y="0.0" width="196" height="337"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="172" height="250"/>
+                <rect key="frame" x="0.0" y="0.0" width="196" height="337"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cq9-jz-LOg">
-                        <rect key="frame" x="0.0" y="0.0" width="172" height="250"/>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <rect key="frame" x="0.0" y="0.0" width="196" height="337"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="수학자포스터" translatesAutoresizingMaskIntoConstraints="NO" id="eRX-pq-PoF">
+                                <rect key="frame" x="0.0" y="0.0" width="196" height="235"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="eRX-pq-PoF" secondAttribute="height" multiplier="1:1.2" id="Bbf-Ow-67f"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이상한 나라의 수학자" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXN-qe-Ex1">
+                                <rect key="frame" x="15" y="245" width="166" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="누적관객수 1234" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qy3-6g-27e">
+                                <rect key="frame" x="15" y="268" width="83.5" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hDs-P3-a45">
+                                <rect key="frame" x="15" y="294" width="72.5" height="31"/>
+                                <color key="backgroundColor" red="0.38823529410000002" green="0.69411764710000001" blue="0.5568627451" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="바로예매"/>
+                                <buttonConfiguration key="configuration" style="plain" title="바로예매"/>
+                            </button>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="Qy3-6g-27e" firstAttribute="top" secondItem="OXN-qe-Ex1" secondAttribute="bottom" constant="5" id="3PX-DY-iTL"/>
+                            <constraint firstAttribute="trailing" secondItem="OXN-qe-Ex1" secondAttribute="trailing" constant="15" id="3Re-Mx-6eZ"/>
+                            <constraint firstItem="OXN-qe-Ex1" firstAttribute="leading" secondItem="cq9-jz-LOg" secondAttribute="leading" constant="15" id="4uV-IX-GEp"/>
+                            <constraint firstAttribute="trailing" secondItem="eRX-pq-PoF" secondAttribute="trailing" id="DEs-Bj-ItQ"/>
+                            <constraint firstItem="OXN-qe-Ex1" firstAttribute="top" secondItem="eRX-pq-PoF" secondAttribute="bottom" constant="10" id="MNs-v5-Mb3"/>
+                            <constraint firstItem="hDs-P3-a45" firstAttribute="leading" secondItem="Qy3-6g-27e" secondAttribute="leading" id="Rbd-MC-ZGd"/>
+                            <constraint firstItem="Qy3-6g-27e" firstAttribute="leading" secondItem="OXN-qe-Ex1" secondAttribute="leading" id="YsQ-Uh-OzV"/>
+                            <constraint firstItem="eRX-pq-PoF" firstAttribute="leading" secondItem="cq9-jz-LOg" secondAttribute="leading" id="bWE-AX-FZD"/>
+                            <constraint firstItem="eRX-pq-PoF" firstAttribute="top" secondItem="cq9-jz-LOg" secondAttribute="top" id="bvJ-5t-X3g"/>
+                            <constraint firstItem="hDs-P3-a45" firstAttribute="top" secondItem="Qy3-6g-27e" secondAttribute="bottom" constant="11" id="cGp-49-yuS"/>
+                        </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="test" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4ag-Nr-aWy">
-                        <rect key="frame" x="71.5" y="114.5" width="29.5" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -34,20 +66,20 @@
                 <constraint firstItem="cq9-jz-LOg" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="GgQ-qo-JrY"/>
                 <constraint firstItem="cq9-jz-LOg" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="LUD-Hh-tQd"/>
                 <constraint firstAttribute="bottom" secondItem="cq9-jz-LOg" secondAttribute="bottom" id="QyY-qF-X6o"/>
-                <constraint firstItem="4ag-Nr-aWy" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="ZA8-Vy-gfd"/>
                 <constraint firstAttribute="trailing" secondItem="cq9-jz-LOg" secondAttribute="trailing" id="bPI-Tq-jCm"/>
-                <constraint firstItem="4ag-Nr-aWy" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="dJw-cy-F1g"/>
             </constraints>
-            <size key="customSize" width="172" height="250"/>
+            <size key="customSize" width="196" height="337"/>
             <connections>
-                <outlet property="testLabel" destination="4ag-Nr-aWy" id="yVC-tR-UTF"/>
+                <outlet property="backgroundUIView" destination="cq9-jz-LOg" id="jos-sj-2d4"/>
+                <outlet property="movieInfo" destination="Qy3-6g-27e" id="lhK-NO-fJ3"/>
+                <outlet property="posterImage" destination="eRX-pq-PoF" id="XTW-dM-fUm"/>
+                <outlet property="reservationButton" destination="hDs-P3-a45" id="Fkk-dM-34d"/>
+                <outlet property="titleLabel" destination="OXN-qe-Ex1" id="usO-RT-i7g"/>
             </connections>
-            <point key="canvasLocation" x="226.08695652173915" y="173.4375"/>
+            <point key="canvasLocation" x="243.47826086956525" y="202.56696428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="수학자포스터" width="600" height="857"/>
     </resources>
 </document>
